tests/errors/semantic/test_semantic_16_invalid_unary_operand.f90
program test_semantic_16_invalid_unary_operand
  implicit none
  integer :: a
  logical :: l
  a = 1
  l = .not. a
end program test_semantic_16_invalid_unary_operand
